--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
   },
+  "author": {
+    "name": "Fabrizio Marconi"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Nemolo/ng-deduplicate-interceptor/issues"
+  },
+  "repository": "https://github.com/Nemolo/ng-deduplicate-interceptor",
+  "homepage": "https://github.com/Nemolo/ng-deduplicate-interceptor",
   "dependencies": {}
 }
