--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ng-deduplicate-interceptor",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "^7.2.0 | ^8.0.0",
+    "@angular/core": "^7.2.0 | ^8.0.0"
   },
   "author": {
     "name": "Fabrizio Marconi"
