--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ng-deduplicate-interceptor",
   "version": "1.0.3",
   "peerDependencies": {
-    "@angular/common": "^7.2.0 | ^8.0.0",
-    "@angular/core": "^7.2.0 | ^8.0.0"
+    "@angular/common": ">=^7.2.0 && <12",
+    "@angular/core": ">=^7.2.0 && <12"
   },
   "author": {
     "name": "Fabrizio Marconi"
